[package]
name = "shed"
version = "0.2.0"
edition = "2018"
authors = ["Asriel <Asriel@dismail.de>"]
description = "A portable key-value store which is appended to the end of an executable file"
readme = "README.md"
license-file = "LICENSE"
keywords = ["key-value", "key", "value", "executable"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"