[package]
name = "shed"
version = "0.2.1"
edition = "2018"
authors = ["Asriel <Asriel@dismail.de>"]
description = "A portable key-value store which is appended to the end of an executable file"
readme = "README.md"
license = "Apache-2.0"
keywords = ["key-value", "key", "value", "executable"]
repository = "https://github.com/Asriel/SHED"
documentation = "https://docs.rs/shed"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"