[package]
name = "shed"
version = "1.0.0"
edition = "2018"
authors = ["Asriel <Asriel@dismail.de>"]
description = "A portable key-value store which is appended to the end of an executable file"
readme = "README.md"
license = "Apache-2.0"
keywords = ["key-value", "key", "value", "executable"]
repository = "https://github.com/Asriel/SHED"
documentation = "https://docs.rs/shed"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
rmp-serde = "0.15.5"